# huskeseddel

./: .dockerignore  .env.docker  .env.template  .gitignore  BACKEND_README.md  CUSTOM_PORTS.md  DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  docker-build-manual.sh  docker-check-ports.sh  docker-compose.alt-ports.yml  docker-compose.custom-ports.yml  docker-compose.dev.yml  docker-compose.yml  docker-fix.sh  docker-port-cleanup.sh  docker-start.sh  docker.sh  kravspecifikation.md  main.py  pyproject.toml  requirements.md  run_backend.py  run_backend_simple.py  run_frontend.sh  start-custom-ports.sh  start.sh  tech.md
backend/: app.py
backend/config/: __init__.py  config.py  database.py
backend/models/: __init__.py  indkoebsliste_element.py  kategori.py  vare.py
backend/routes/: __init__.py  indkoebsliste_routes.py  kategori_routes.py  vare_routes.py
backend/utils/: __init__.py  validation.py
docker/: nginx-custom.conf  nginx.conf
frontend/: .env.production  .env.template  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: IndkoebslistePage.jsx  KategorierPage.jsx  Navigation.jsx  VarerPage.jsx
frontend/src/services/: api.js  index.js  indkoebslisteService.js  kategoriService.js  vareService.js
