[project]
name = "huskeseddel"
version = "0.1.0"
description = "Indkøbsliste system til familiehusholdninger"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-cors>=4.0.0",
    "marshmallow>=3.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
